--- a/src/components/intro.module.css
+++ b/src/components/intro.module.css
@@ -1,16 +1,20 @@
 .frame {
-    width: 33%;
+    width: 60%;
     margin: auto;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .text {
     color: black;
     font-size: 1.25em;
     font-family: 'Poppins', sans-serif;
-    line-height: 200%;
+    /* line-height: 200%; */
 
     text-align: center;
+}
+
+a {
+    color: rgb(28,153,138);
 }
 
 @media (max-width: 1000px) {
