--- a/src/components/scaffolding.module.css
+++ b/src/components/scaffolding.module.css
@@ -1,4 +1,4 @@
-.scaffolding_container {
+/* .scaffolding_container {
     width: 20%;
     margin-left: 1%;
     display: inline-block;
@@ -24,4 +24,4 @@
     background-image: url("../images/scaffolding_blue_stairs.gif");
     background-size: 100%;
     background-repeat: repeat-y;
-}
+} */
