--- a/src/templates/sketch-post.module.css
+++ b/src/templates/sketch-post.module.css
@@ -1,4 +1,4 @@
-.back_container {
+/* .back_container {
     height: 0;
 }
 
@@ -51,4 +51,4 @@
     font-weight: 400;
     font-size: 1.25em;
     padding: 10px;
-}
+} */
