--- a/src/components/category_rooms.module.css
+++ b/src/components/category_rooms.module.css
@@ -229,7 +229,7 @@
     background-image: url("../images/bathroomRight1.png");
 }
 
-.room_container:nth-child(4) .room {
+/* .room_container:nth-child(4) .room {
     background-image: url('../images/banisterBack.png');
     background-position-x: 40%;
 }
@@ -272,6 +272,22 @@
 }
 
 .room_container:nth-child(6) .friend {
+    background-image: url("../images/olivia1.png");
+} */
+
+.room_container:nth-child(4) .room {
+    background-image: url('../images/kitchenBack.png');
+}
+
+.room_container:nth-child(4) .left_wall {
+    background-image: url("../images/kitchenLeft.png");
+}
+
+.room_container:nth-child(4) .right_wall {
+    background-image: url("../images/kitchenRight.png");
+}
+
+.room_container:nth-child(4) .friend {
     background-image: url("../images/olivia1.png");
 }
 
@@ -466,7 +482,14 @@
     .room_container:nth-child(3) .right_wall {
         background-image: url("../images/bathroomRight2.png");
     }
-    .room_container:nth-child(6) .friend {
+    /* .room_container:nth-child(6) .friend {
+        background-image: url("../images/olivia2.png");
+        width: 80%;
+        background-position: 24%;
+        position: relative;
+        left: 5%;
+    } */
+    .room_container:nth-child(4) .friend {
         background-image: url("../images/olivia2.png");
         width: 80%;
         background-position: 24%;
@@ -501,7 +524,10 @@
     .room_container:nth-child(3) .right_wall {
         background-image: url("../images/bathroomRight3.png");
     }
-    .room_container:nth-child(6) .friend {
+    /* .room_container:nth-child(6) .friend {
+        background-image: url("../images/olivia3.png");
+    } */
+    .room_container:nth-child(4) .friend {
         background-image: url("../images/olivia3.png");
     }
 }
