--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,4 +1,4 @@
-.larger_header {
+.header {
     background: rgb(63,93,170);
     color: white;
 
@@ -20,20 +20,8 @@
 }
 
 .smaller_header {
-    background: rgb(63,93,170);
-    color: white;
-
-    position: fixed;
-    top: 0;
-    z-index: 9999;
-    
-    transition: all 0.3s ease;
-
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 100%;
-    padding-left: 5%;
-    padding-right: 5%;
 
     display: grid;
     grid-template-rows: auto;
@@ -50,31 +38,16 @@
     text-decoration: none;
     color: black;
     font-size: 1em;
-    text-align: center;
 
-    display: inline-block;
-
-    position: relative;
-    top: -10px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
     transition: all 0.3s ease;
 }
 
 .smaller_title_container {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    text-decoration: none;
     font-size: 0.75em;
-    text-align: center;
-
-    display: inline-block;
-
-    position: relative;
-
-    transition: all 0.3s ease;
 }
 
 .site_title_text {
@@ -93,39 +66,19 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    display: inline-block;
-
-    position: relative;
-    top: 5px;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
 
     transition: all 0.3s ease;
 }
 
 .smaller_navbar {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-
-    position: relative;
-    top: 5px;
-
-    transition: all 0.3s ease;
 }
 
 .navbar li {
     display: inline-block;
-    margin-right: 15%;
-}
-
-.smaller_navbar li {
-    display: inline-block;
-    margin-right: 15%;
+    margin-right: 10%;
 }
 
 .navbar li a {
@@ -139,13 +92,7 @@
 }
 
 .smaller_navbar li a {
-    color: white;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
     font-size: 1.25em;
-    display: block;
-    margin: 0;
-    transition: all 0.3s ease;
 }
 
 .navdropdown {
@@ -251,36 +198,14 @@
 
     transition: all 0.3s ease;
 
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .smaller_socialbar {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
     width: 40%;
-    height: 100%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
     margin-left: 60%;
-
-    text-align: right;
-
-    position: absolute;
-    /* top: 20%; */
-
-    cursor: pointer;
-
-    transition: all 0.3s ease;
-
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: auto;
 }
 
 .socialbar_link {
@@ -295,14 +220,6 @@
 }
 
 .smaller_socialbar_link {
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    display: inline-block;
-    text-align: center;
-
-    z-index: 99999;
-    cursor: pointer;
 }
 
 .youtube {
@@ -362,8 +279,8 @@
     background-size: 100%;
     background-repeat: no-repeat;
 
-    width: 2.5em;
-    height: 2.5em;
+    width: 2em;
+    height: 2em;
     float: right;
     padding: 0;
 
@@ -371,16 +288,8 @@
 }
 
 .smaller_instagram {
-    background-image: url("../images/instagram_btn.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-
-    width: 2em;
-    height: 2em;
-    float: right;
-    padding: 0;
-
-    transition: all 0.3s ease;
+    width: 1.5em;
+    height: 1.5em;
 }
 
 /*-------------------------HUD--------------------------*/
@@ -445,12 +354,12 @@
 }
 
 @media (max-width: 1000px) {
-    .socialbar {
+    /* .socialbar {
         grid-template-columns: 50% 50%;
     }
     .smaller_socialbar {
         grid-template-columns: 50% 50%;
-    }
+    } */
     .socialbar a:nth-child(2) {
         display: none;
     }
