--- a/src/components/design_ham_btn.module.css
+++ b/src/components/design_ham_btn.module.css
@@ -29,7 +29,7 @@
     .btn {
         display: flex;
         justify-content: flex-end;
-        align-items: flex-start;
+        align-items: center;
     }
 }
 
