--- a/src/components/about_body.module.css
+++ b/src/components/about_body.module.css
@@ -3,7 +3,12 @@
     margin: auto;
     background: white;
     padding: 50px;
-    /* margin-top: 100px; */
+    z-index: 10;
+    margin-bottom: 40px;
+}
+
+.aboutbody h1 {
+    color: black;
     margin-bottom: 50px;
 }
 
@@ -17,9 +22,8 @@
 
 @media (max-width: 750px) {
     .aboutbody {
-        padding: 0;
-        margin: 0;
-        margin-left: 10%;
+        margin: auto;
+        margin-bottom: 40px;
         width: 80%;
     }
 
@@ -28,9 +32,9 @@
 
 @media (max-width: 550px) {
     .aboutbody {
-        padding: 0;
-        margin: 0;
-        width: 100%;
+        padding: 20px;
+        padding-top: 50px;
+        width: calc(100% - 40px);
     }
 
     
