--- a/src/components/ground.module.css
+++ b/src/components/ground.module.css
@@ -10,7 +10,7 @@
 }
 
 .grass {
-    z-index: -998;
+    z-index: 10;
 
     background-image: url('../images/grass.png');
     background-repeat: repeat-x;
@@ -27,13 +27,15 @@
     grid-row-start: 2;
     grid-row-end: 4;
 
+    z-index: 1;
+
     background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1) 70%, rgba(0,0,0,1) 100%);
 }
 
 .dirt {
     background-image: url('../images/dirt.png');
     background-repeat: repeat;
-    z-index: -999;
+    /* z-index: -999; */
 
     grid-column-start: 1;
     grid-column-end: 4;
