--- a/src/components/hamburger_button.module.css
+++ b/src/components/hamburger_button.module.css
@@ -23,7 +23,8 @@
 
 @media (max-width: 1300px) {
     .btn {
-        display: block;
+        display: flex;
+        align-items: center;
     }
 }
 
