--- a/src/components/hamburger_menu.module.css
+++ b/src/components/hamburger_menu.module.css
@@ -2,7 +2,7 @@
     display: block;
     padding: 2em;
     padding-left: 3em;
-    padding-top: 0;
+    /* padding-top: 0; */
     padding-bottom: 2.5em;
     background: rgb(63,93,170);
     position: relative;
@@ -15,7 +15,7 @@
     display: block;
     padding: 2em;
     padding-left: 3em;
-    padding-top: 0;
+    /* padding-top: 0; */
     padding-bottom: 2.5em;
     background: rgb(63,93,170);
     position: relative;
