--- a/src/components/house.module.css
+++ b/src/components/house.module.css
@@ -7,6 +7,8 @@
     display: grid;
     grid-template-columns: auto 35px 880px 35px auto;
     grid-template-rows: 90px 30px auto auto;
+
+    z-index: 11;
 }
 
 .roof_container {
@@ -27,7 +29,7 @@
     width: 100%;
     height: 100%;
 
-    z-index: 2;
+    /* z-index: 12; */
 }
 
 .brick {
