--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,3 +1,8 @@
+.layout {
+    background: linear-gradient( rgb(63,93,170), rgb(162,189,216) );
+    z-index: -999999;
+    
+}
 .designlayout html {
     background: red;
 }
@@ -19,7 +24,7 @@
 }
 
 .body_container {
-    margin-top: 15%;
+    margin-top: calc(70px + 1em);
 
     display: grid;
     grid-template-columns:  auto;
@@ -28,7 +33,6 @@
 
 .clouds {
     height: 0;
-    z-index: -999;
 }
 
 .cloud1 {
@@ -41,7 +45,6 @@
     background-size: 100%;
     top: 200px;
     left: 5%;
-    z-index: -999;
 }
 
 .cloud2 {
@@ -54,17 +57,15 @@
     background-size: 100%;
     top: 500px;
     left: 20%;
-    z-index: -999;
 }
 
-.grass {
+/* .grass {
     background-image: url('../images/grass.png');
     background-repeat: repeat-x;
     width: 100%;
     height: 100px;
     position: relative;
     top: -550px;
-    z-index: -999;
 }
 
 .dirt {
@@ -74,7 +75,12 @@
     height: 500px;
     position: relative;
     top: -100px;
-    z-index: -999;
+} */
+
+@media (max-width: 750px) {
+    .body_container {
+        margin-top: calc(50px + 1em);
+    }
 }
 
 @media (min-width: 750px) {
