--- a/src/components/recent_works.module.css
+++ b/src/components/recent_works.module.css
@@ -8,6 +8,8 @@
     grid-row-start: 2;
     grid-row-end: 4;
 
+    z-index: 20;
+
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
