--- a/src/components/video_container.module.css
+++ b/src/components/video_container.module.css
@@ -4,9 +4,7 @@
     background-repeat: no-repeat;
 
     width: 50%;
-    padding-top: 7.5%;
-    padding-bottom: 10%;
-    padding-right: 6%;
+    padding: 5% 10% 20% 0;
     margin: 0;
     margin-left: 5%;
     position: relative;
@@ -14,7 +12,7 @@
     z-index: 999;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 750px) {
     .tablet {
         width: 94%;
         margin-left: 0;
