--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,13 +2,15 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Serif&display=swap);
 
 html {
-    background: linear-gradient( rgb(63,93,170), rgb(162,189,216) );
+    background: black;
     padding: 0;
     margin: 0;
     font-family: 'PT Serif', serif;
 }
 
 body {
+    background: linear-gradient( rgb(63,93,170), rgb(162,189,216) );
+    z-index: -999999;
     margin: 0;
     min-height: 860px;
 }
