--- a/src/templates/normal-post.module.css
+++ b/src/templates/normal-post.module.css
@@ -25,26 +25,36 @@
     top: 88px;
 }
 
+.post_container {
+    padding: 0 5% 5% 5%;
+    max-width: 1200px;
+    margin: auto;
+    margin-bottom: 10%;
+
+    z-index: 10;
+    background: white;
+}
+
 .post_title {
-    background-image: url('../images/tile_paper.jpg');
+    /* background-image: url('../images/tile_paper.jpg');
     background-repeat: repeat;
-    background-size: 100%;
+    background-size: 100%; */
 
     color: black;
     
-    font-family: 'PT Serif', serif;
+    /* font-family: 'PT Serif', serif; */
     font-size: 3em;
     font-weight: 600;
     text-decoration: none;
 
     padding: 2%;
     padding-bottom: 2.5%;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.5);
+    /* box-shadow: 0 1px 4px rgba(0,0,0,0.5); */
 
     margin: 0;
     margin: auto;
+    margin-top: 80px;
     width: 50%;
-    margin-top: 20px;
     text-align: center;
 }
 
@@ -69,12 +79,13 @@ figcaption {
 }
 
 
-@media (max-width: 450px) {
+@media (max-width: 750px) {
     .post_title {
+        margin-top: 50px;
         width: 80%;
         padding-bottom: 4%;
 
-        font-size: 1.5em;
+        font-size: 2em;
         
     }
 }
