--- a/src/templates/normal-post.module.css
+++ b/src/templates/normal-post.module.css
@@ -27,6 +27,7 @@
 
 .post_container {
     padding: 0 5% 5% 5%;
+    width: 90%;
     max-width: 1200px;
     margin: auto;
     margin-bottom: 10%;
