--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -201,99 +201,19 @@
     color: rgb(28,153,138);
 }
 
-.socialbar {
-    list-style: none;
-    
-    text-align: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
-    cursor: pointer;
-}
-
-.socialbar_link {
-    z-index: 99999;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    width: 1.5em;
-}
-
-.youtube {
-    background-image: url("../images/youtube_btn.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-    cursor: pointer;
-    z-index: 99999;
-}
-
-.vimeo {
-    background-image: url("../images/vimeo_btn.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-}
-
-.instagram {
-    background-image: url("../images/instagram_btn.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-}
-
-.light_vimeo {
-    background-image: url("../images/vimeo_btn_black.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-}
-
-.light_youtube {
-    background-image: url("../images/youtube_btn_black.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-    cursor: pointer;
-    z-index: 99999;
-}
-
-.light_instagram {
-    background-image: url("../images/instagram_btn_black.png");
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 0;
-    padding-bottom: 100%;
-    display: inline-block;
-    margin: 0;
-}
-
 .bioInfo p {
     padding-bottom: 0.25em;
 }
 
+.socialbar_container {
+    display: flex;
+    justify-content: center;
+}
+
 @media (min-width: 750px) {
+    .socialbar_container {
+        justify-content: flex-end;
+    }
     .darkFooter {
         grid-template-columns: 5% auto auto auto 5%;
         grid-template-rows: auto;
