--- a/src/components/house.module.css
+++ b/src/components/house.module.css
@@ -28,8 +28,6 @@
 
     width: 100%;
     height: 100%;
-
-    /* z-index: 12; */
 }
 
 .brick {
@@ -48,7 +46,17 @@
 
     display: grid;
     grid-template-columns: auto 400px auto 400px auto;
-    grid-template-rows: 20px 400px 20px 400px 20px;
+    /* grid-template-rows: 20px 400px 20px 400px 20px; */
+    grid-template-rows: auto;
+}
+
+.brick li {
+    margin-bottom: 20px;
+}
+
+.brick li:nth-child(1),
+.brick li:nth-child(2) {
+    margin-top: 20px;
 }
 
 /*----------------------------MEDIA QUERIES-----------------------------------*/
@@ -85,7 +93,13 @@
         grid-column-end: 2;
 
         grid-template-columns: 25px 48% 25px auto 25px;
-        grid-template-rows: 20px auto 20px 400px 20px;
+        grid-template-rows: auto;
+    }
+}
+
+@media (max-width: 440px) {
+    .brick {
+        grid-template-columns: 20px auto 20px;
     }
 }
 
