--- a/src/templates/category.module.css
+++ b/src/templates/category.module.css
@@ -1,101 +1,13 @@
-
-
-/* .projectsList {
-    margin-top: 20%;
-    list-style: none;
-    padding: 0;
-}
-
-.projectsList li {
-    display: block;
-    width: 60%;
-    margin-right: 40%;
-    margin-bottom: 15%;
-}
-
-.projectsList li:nth-child(odd) {
-    margin-right: 0;
-    margin-left: 40%;
-}
-
-h3 {
-    color: black;
-    text-align: left;
-    margin-top: 10px;
-    margin-bottom: 0;
-}
-
-.projectsList li:hover h3 {
-    color:pink;
-}
-
-.catTitle {
-    text-align: left;
-}
-
-.projectsList li:nth-child(odd) h3 {
-    text-align:right;
-}
-
-@media (min-width:750px) {
-    .projectsList li:nth-child(odd) {
-        margin: 0;
-        margin-right:10px;
-        margin-bottom: 30px;
-    }
-    .projectsList li:nth-child(odd) h3 {
-        text-align:left;
-    }
-    .projectsList li {
-        margin: 0;
-        width:auto;
-        margin-right:10px;
-        margin-bottom: 60px;
-    }
-    .projectsList {
-        display: grid;
-        grid-template-columns: repeat(3,calc(100%/3));
-    } */
-    /* .projectsList {
-        display: grid;
-        grid-template-columns: repeat(12,calc(100%/12));
-        grid-template-rows: auto;
-    }
-    .projectsList li:first-child {
-        grid-column-start: 9;
-        grid-column-end: 13;
-        grid-row-start: 1;
-        grid-row-end: 2;
-    }
-    .projectsList li:nth-child(2n) {
-        grid-column-start: 1;
-        grid-column-end: 6;
-        grid-row-start: 2;
-        grid-row-end: 3;
-    } */
-/* }
-@media (min-width:1000px) {
-    .projectsList {
-        width:80%;
-        margin:auto;
-        margin-top:100px;
-    }
-    .catTitle {
-        text-align:center;
-    }
-} */
-
-
-/*---------------OLD STUFF FOR ROOMS AND STUFF-----------------------------------*/
 .container {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
-    grid-row-end: 5;
+    grid-row-end: 6;
+
 
     display: grid;
     grid-template-columns:  auto;
-    grid-template-rows:  100px auto 50px auto;
+    grid-template-rows:  auto 50px auto;
 }
 
 /*----------------------------ROOMS-----------------------------------*/
@@ -119,121 +31,19 @@ h3 {
     grid-column-end: 5;
 }
 
-.room_container a {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    width: 100%;
-    height: 100%;
-
-    display: grid;
-    grid-template-columns:  30px auto 30px;
-    grid-template-rows: auto;
-}
-
-.featuredImage {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    box-shadow: inset 0 0 10px #000000;
-}
-
-.featuredImage div {
-    z-index: 1;
-}
-
-.left_brick_hole {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    background-image: url("../images/brick_hole.png");
-    background-repeat: repeat-y;
-    background-size: 100%;
-
-    z-index: 2;
-}
-
-.right_brick_hole {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    background-image: url("../images/brick_hole_right.png");
-    background-repeat: repeat-y;
-    background-size: 100%;
-
-    z-index: 2;
-}
-
-.room_link_container {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
-    height: 100%;
-
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-
-    opacity: 0;
-
-    z-index: 2;
-}
-
-.room_link_container:hover {
-    opacity: 1;
-}
-
-.room_link_background {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-.room_link {
-    color: white;
-    background: rgba(0,0,0,0.75);
-    font-size: 3em;
-    padding: 10px;
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    text-align: center;
-}
-
 .basement_container {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 5;
-
-    background-image: url('../images/concrete.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-
-    display: grid;
-    grid-template-columns: auto 400px auto;
-    grid-template-rows: 12px 400px 24px;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    list-style: none;
+    z-index: 10;
 }
 
-.basement_container a {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
+/*----------------------------FEATURED IMAGE-----------------------------------*/
 
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+.featuredImage {
+    height: 100%;
 }
 
 /*----------------------------MEDIA QUERIES-----------------------------------*/
@@ -246,23 +56,9 @@ h3 {
         background-size: 880px;
         background-position-x: center; 
     }
-
-    .room_link_container {
-        opacity: 0;
-    }
-
 }
 
-@media (max-width: 750px) {
-    .room_link_container {
-        grid-template-rows: 5em;
-    }
-    .room_link {
-        font-size: 2.5em;
-    }
-}
-
-@media (max-width: 650px) {
+@media (max-width: 440px) {
     .room_container:nth-child(odd) {
         grid-column-start: 2;
         grid-column-end: 3;
@@ -276,23 +72,6 @@ h3 {
         grid-template-rows: 12px auto 24px;
 
         background-size: 185%;
-    }
-
-    .room_link_container {
-        grid-template-rows: 4em;
-    }
-    .room_link {
-        font-size: 2em;
-    }
-}
-
-@media (max-width: 440px) {
-    .basement {
-        width: 90%;
-    }
-
-    .basement_link_container {
-        width: 90%;
     }
 }
 
