--- a/src/components/design/ham_btn.module.css
+++ b/src/components/design/ham_btn.module.css
@@ -1,10 +1,14 @@
-/* .btn {
+.btn {
     z-index: 9999999;
     display: none;
+    cursor: pointer;
 }
 
-.btn_open {
-    background-image: url("../images/hamburger_x_black.png");
+.btn svg {
+    fill: white;
+}
+
+.btn_open, .btn_closed {
     background-size: 100%;
     background-repeat: no-repeat;
 
@@ -12,18 +16,16 @@
     height: 2em;
 
     float: right;
+
+    padding: 2px;
+    border: 2px solid transparent;
+    border-radius: 50%;
 }
 
-.btn_closed {
-    background-image: url("../images/hamburger_ham_black.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-
-    width: 2em;
-    height: 2em;
-
-    float: right;
-}  
+.btn_open:hover,
+.btn_closed:hover {
+    border-color: white;
+}
 
 @media (max-width: 1000px) {
     .btn {
@@ -37,4 +39,4 @@
     .btn {
         margin-left: 5%;
     }
-} */
+}
