--- a/src/components/design/ham_menu.module.css
+++ b/src/components/design/ham_menu.module.css
@@ -1,9 +1,10 @@
 .open {
     padding: 10px 20px;
     padding-top: 2em;
-    background: white;
+    background: black;
     
-    box-shadow: -1px 1px 2px rgba(0,0,0,0.2);
+    border-bottom: 4px solid white;
+    box-shadow: 0px 40px 40px rgb(0 0 0 / 50%);
     z-index: 9999;
     transition: all 0.3s ease;
 }
@@ -21,10 +22,15 @@
 }
 
 .open a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-size: 1.2em;
     display: block;
     padding: 2%;
+    padding-right: 4px;
+}
+
+.open a:hover {
+    text-decoration: underline;
 }
