--- a/src/components/design/meta.module.css
+++ b/src/components/design/meta.module.css
@@ -1,26 +1,33 @@
 .cover {
     margin-top: 25px;
-    width: 75%;
-    display: inline-block;
+    width: 100%;
     box-shadow: none;
+    margin-bottom: 45px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .cover img {
     width: 100%;
 }
 
+.cover img:first-child {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.cover img:last-child {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 .meta {
-    margin-top: 25px;
-    width: 17%;
-    display: inline-block;
-    text-align: right;
-    float: right;
+    width: 100%;
 }
 
 
-.meta h3 {
-    text-align: right;
-    color: gray;
+div.meta h3 {
+    color: lightgray;
     font-weight: 400;
     margin-bottom: 0;
     font-size: 0.75em;
@@ -40,7 +47,7 @@
 }
 
 .container h1 {
-    color: gray;
+    color: lightgray;
     font-size: 1em;
     font-weight: 400;
     text-align: left;
@@ -50,10 +57,9 @@
 }
 
 .container h2 {
-    font-weight: 400;
+    font-weight: 800;
     font-family: 'Poppins', sans-serif;
-    font-size: 1.25em;
-    color: black;
+    font-size: 1.75em;
 
     margin-top: 10px;
     margin-bottom: 30px;
@@ -64,7 +70,6 @@
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
     font-size: 1.25em;
-    color: black;
 
     text-align: left;
 
@@ -76,18 +81,27 @@
 
 .container p {
     font-family: 'Poppins', sans-serif;
-    color: black;
     width: 70%;
     margin-bottom: 20px;
 }
 
 .container span {
-    margin-top: 30px;
-    margin-bottom: 50px;
     text-align: left;
-    /* border: 1px solid green; */
     position: relative;
     box-shadow: none;
+    margin-bottom: 30px;
+}
+
+.container span img {
+    box-shadow: none;
+    border-radius: 10px;
+}
+
+.container iframe {
+    margin-bottom: 30px;
+    background: white;
+    border-radius: 10px;
+    border: none;
 }
 
 .container ol {
@@ -108,28 +122,47 @@
 
 .container img {
     width: 100%;
+    border-radius: 10px;
+    
+}
+.container > img {
+    margin-bottom: 30px;
+}
+
+.container a {
+    font-family: 'Poppins', sans-serif;
+}
+
+.container figure {
+    margin: 0;
+    margin-bottom: 30px;
+}
+.container figure span {
+    margin-bottom: 0;
 }
 
 .quote {
-    font-size: 1.25em;
+    font-size: 1em;
     font-family: 'PT Serif', serif;
     
     width: 60%;
-    
+    margin: auto;
     margin-bottom: 50px;
+    padding-right: 55px;
+    padding-left: 55px;
     text-align: left;
 
+    border-color: white;
+    border-right: 2px solid;
+    border-left: 2px solid;
     
 }
 
 .quote p {
-    width: 90%;
+    width: 100%;
     font-family: 'PT Serif', serif;
-    color:  rgb(63,93,170);
-    padding-left: 5%;
-    padding-right: 5%;
+    color:  black;
     padding-bottom: 0;
-    border-left: 2px solid  rgb(63,93,170);
 }
 
 .img_pair {
@@ -188,6 +221,7 @@
 
 .img_pair img {
     width: 100%;
+    border-radius: 10px;
 }
 
 .full_width_image {
@@ -195,9 +229,10 @@
     position: relative;
     left: -35%;
     width: 200%;
+    margin-bottom:50px;
 }
 
-@media (min-width:1600px) {
+@media (min-width:2000px) {
     .full_width_image {
         left:0;
         width:100%;
@@ -266,23 +301,141 @@
     align-self: start;
 }
 
+/* ----- browserWindow ------*/
+.browsercontainer {
+    margin-bottom: 50px;
+}
+
+/* tab bar */
+.browserTabBar {
+    width: 100%;
+    border: 2px solid white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-bottom: 5px;
+}
+.browserTabBar svg {
+    width: auto;
+    height: auto;
+    padding: 10px;
+    padding-bottom: 5px;
+}
+.browserTabBar svg circle {
+    stroke: white;
+}
+.prototypecontainer .browserTabBar,
+.prototypecontainer img {
+    border: 2px dashed gray;
+}
+.prototypecontainer svg circle {
+    stroke: gray;
+}
+
+/* window and contents */
+.browserWindow {
+    width: 100%;
+}
+
+.browserWindow figure,
+.multiMobileContainer {
+    margin: 0;
+}
+
+.container figcaption,
+.browserWindow figcaption,
+.multiMobileContainer figcaption {
+    color: gray;
+    font-style: italic;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 15px;
+    padding-right: 5px;
+}
+
+.browserWindow img + figcaption {
+    padding-top: 7px;
+}
+
+.browserWindow span {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.browserWindow span img {
+    border: 2px solid white;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    overflow: hidden;
+    width: 100%;
+}
+.prototypecontainer .browserWindow img {
+    border: 2px dashed gray;
+}
+/* ----- end browserWindow ------*/
+
+/* ----- mobile and multiMobile ------*/
+.multiMobile {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+
+.mobileContainer {
+    display: inline-block;
+    border: 5px solid white;
+    border-radius: 20px;
+    padding: 8px;
+    padding-bottom: 4px;
+    width: 30%;
+    height: 100%;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.mobileContainer:nth-child(2) {
+    margin-top: 150px;
+}
+
+.mobileContainer:nth-child(3) {
+
+}
+
+.mobileContainer img {
+    border-radius: 10px;
+}
+/* ----- end mobile and multiMobile ------*/
+
+/* ----- buttonLink ------*/
+.buttonLinkContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.buttonLinkContainer a.buttonLink {
+    border: 2px solid white;
+    padding: 15px;
+    margin: auto;
+    text-decoration: none;
+}
+
+
+.buttonLink:hover {
+    border: 2px solid white;
+    background-color: white;
+    padding: 15px;
+    color: black;
+}
+/* ----- end buttonLink ------*/
+
+/* .browserWindow span img {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+} */
+
 @media (max-width: 1250px) {
-    .cover {
-        width: 100%;
-        display: inline-block;
-        box-shadow: none;
-        margin: auto;
-    }
-    .meta {
-        margin-top: 25px;
-        width: 100%;
-        display: inline-block;
-        text-align: left;
-        float: none;
-    }
-    .meta h3 {
-        text-align: left;
-    }
     .container {
         width: 100%;
         margin-top: 75px;
@@ -301,9 +454,6 @@
     .container h3 {
         margin-top: 0;
         width: 100%;
-    }
-    .container span {
-        margin-bottom: 30px;
     }
     .container p {
         width: 100%;
@@ -341,9 +491,6 @@
     .container h3 {
         margin-top: 0;
         width: 100%;
-    }
-    .container span {
-        margin-bottom: 30px;
     }
     .container p {
         width: 100%;
