--- a/src/components/design/resume_container.module.css
+++ b/src/components/design/resume_container.module.css
@@ -19,7 +19,7 @@
     
 }
 
-.container a {
+/* .container a {
     color: white;
     background: black;
     padding: 10px 20px;
@@ -28,7 +28,7 @@
 
 .container a:hover {
     background:rgb(28,153,138);
-}
+} */
 
 @media (min-width: 750px) {
     .container {
