--- a/src/components/design/ham_menu.module.css
+++ b/src/components/design/ham_menu.module.css
@@ -1,24 +1,32 @@
 .open {
     padding: 10px 20px;
-    padding-top: 2em;
+    /* padding-top: 2em; */
+    padding-bottom: 0;
     background: black;
     
-    border-bottom: 4px solid white;
-    box-shadow: 0px 40px 40px rgb(0 0 0 / 50%);
+    /* border-bottom: 4px solid white;
+    box-shadow: 0px 40px 40px rgb(0 0 0 / 50%); */
     z-index: 9999;
     transition: all 0.3s ease;
 }
 
 .closed {
-    transform: translateX(110%);
+    /* transform: translateY(-100%); */
+    /* height: 0; */
+    transform: scaleY(0);
 }
 
 .open li {
-    list-style: none;  
+    list-style: none; 
+    transition: opacity 0.3s ease 0.3s;
 }
 
 .open li:nth-child(1) {
     margin-top: 25px;
+}
+
+.closed li {
+    opacity: 0;
 }
 
 .open a {
