--- a/src/components/design/header.module.css
+++ b/src/components/design/header.module.css
@@ -231,13 +231,17 @@ a.title_container {
 }
 
 .ham_menu_container {
-    position: fixed;
+    /* position: fixed; */
     z-index: 9999;
     top: 0;
     right: 0;
     display: none;
     width: 100%;
-    height:0;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    /* height:0; */
     text-align: right;
 }
 
