--- a/src/templates/category.module.css
+++ b/src/templates/category.module.css
@@ -43,6 +43,7 @@
 /*----------------------------FEATURED IMAGE-----------------------------------*/
 
 .featuredImage {
+    width: 100%;
     height: 100%;
 }
 
