Blue Pipe and Sulze posts

--- a/src/components/post_blocks.module.css
+++ b/src/components/post_blocks.module.css
@@ -30,8 +30,10 @@ p {
 }
 
 .group {
+    margin: auto;
     margin-top: 5%;
     margin-bottom: 10%;
+    max-width: 1000px;
 }
 
 .group figcaption {
