--- a/src/components/design/ham_menu.module.css
+++ b/src/components/design/ham_menu.module.css
@@ -1,32 +1,36 @@
 .open {
-    padding: 10px 20px;
-    /* padding-top: 2em; */
-    padding-bottom: 0;
+    position: relative;
+
     background: black;
     
-    /* border-bottom: 4px solid white;
-    box-shadow: 0px 40px 40px rgb(0 0 0 / 50%); */
+    padding: 20px;
+    padding-top: 0;
+    
+    border-bottom: 2px solid white;
+    box-shadow: 0px 40px 40px rgb(0 0 0 / 50%);
+
     z-index: 9999;
+    
     transition: all 0.3s ease;
+    transform-origin: top center;
 }
 
 .closed {
-    /* transform: translateY(-100%); */
-    /* height: 0; */
+    transform-origin: top center;
     transform: scaleY(0);
+    transition: all 0.3s ease;
 }
 
-.open li {
+
+/*------------------MENU ITEM ELEMENTS---------------- */
+.open div, .open li {
     list-style: none; 
     transition: opacity 0.3s ease 0.3s;
 }
 
-.open li:nth-child(1) {
-    margin-top: 25px;
-}
-
-.closed li {
+.closed div, .closed li {
     opacity: 0;
+    transition: opacity 0s ease 0s;
 }
 
 .open a {
